// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteHits() calls twice render(<Hits props />, container) 1`] = `
Object {
  "bindEvent": [Function],
  "cssClasses": Object {
    "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
    "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
    "emptyRoot": "ais-InfiniteHits--empty",
    "item": "ais-InfiniteHits-item",
    "list": "ais-InfiniteHits-list",
    "loadMore": "ais-InfiniteHits-loadMore",
    "loadPrevious": "ais-InfiniteHits-loadPrevious",
    "root": "ais-InfiniteHits root cx",
  },
  "hasShowPrevious": false,
  "hits": Array [
    Object {
      "__position": 3,
      "objectID": "1",
    },
    Object {
      "__position": 4,
      "objectID": "2",
    },
  ],
  "insights": [Function],
  "isFirstPage": true,
  "isLastPage": true,
  "results": SearchResults {
    "_rawResults": Array [
      Object {
        "exhaustiveFacetsCount": true,
        "exhaustiveNbHits": true,
        "hits": Array [
          Object {
            "objectID": "1",
          },
          Object {
            "objectID": "2",
          },
        ],
        "hitsPerPage": 2,
        "nbHits": 2,
        "nbPages": 1,
        "page": 1,
        "params": "",
        "processingTimeMS": 0,
        "query": "",
      },
    ],
    "_state": SearchParameters {
      "disjunctiveFacets": Array [],
      "disjunctiveFacetsRefinements": Object {},
      "facets": Array [],
      "facetsExcludes": Object {},
      "facetsRefinements": Object {},
      "hierarchicalFacets": Array [],
      "hierarchicalFacetsRefinements": Object {},
      "index": "",
      "numericRefinements": Object {},
      "tagRefinements": Array [],
    },
    "disjunctiveFacets": Array [],
    "exhaustiveFacetsCount": true,
    "exhaustiveNbHits": true,
    "facets": Array [],
    "hierarchicalFacets": Array [],
    "hits": Array [
      Object {
        "__position": 3,
        "objectID": "1",
      },
      Object {
        "__position": 4,
        "objectID": "2",
      },
    ],
    "hitsPerPage": 2,
    "nbHits": 2,
    "nbPages": 1,
    "page": 1,
    "params": "",
    "processingTimeMS": 0,
    "query": "",
  },
  "sendEvent": [Function],
  "showMore": [Function],
  "showPrevious": [Function],
  "templateProps": Object {
    "templates": Object {
      "empty": "No results",
      "item": [Function],
      "showMoreText": "Show more results",
      "showPreviousText": "Show previous results",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "empty": false,
      "item": false,
      "showMoreText": false,
      "showPreviousText": false,
    },
  },
}
`;

exports[`infiniteHits() calls twice render(<Hits props />, container) 2`] = `
Object {
  "bindEvent": [Function],
  "cssClasses": Object {
    "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
    "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
    "emptyRoot": "ais-InfiniteHits--empty",
    "item": "ais-InfiniteHits-item",
    "list": "ais-InfiniteHits-list",
    "loadMore": "ais-InfiniteHits-loadMore",
    "loadPrevious": "ais-InfiniteHits-loadPrevious",
    "root": "ais-InfiniteHits root cx",
  },
  "hasShowPrevious": false,
  "hits": Array [
    Object {
      "__position": 3,
      "objectID": "1",
    },
    Object {
      "__position": 4,
      "objectID": "2",
    },
  ],
  "insights": [Function],
  "isFirstPage": true,
  "isLastPage": true,
  "results": SearchResults {
    "_rawResults": Array [
      Object {
        "exhaustiveFacetsCount": true,
        "exhaustiveNbHits": true,
        "hits": Array [
          Object {
            "objectID": "1",
          },
          Object {
            "objectID": "2",
          },
        ],
        "hitsPerPage": 2,
        "nbHits": 2,
        "nbPages": 1,
        "page": 1,
        "params": "",
        "processingTimeMS": 0,
        "query": "",
      },
    ],
    "_state": SearchParameters {
      "disjunctiveFacets": Array [],
      "disjunctiveFacetsRefinements": Object {},
      "facets": Array [],
      "facetsExcludes": Object {},
      "facetsRefinements": Object {},
      "hierarchicalFacets": Array [],
      "hierarchicalFacetsRefinements": Object {},
      "index": "",
      "numericRefinements": Object {},
      "tagRefinements": Array [],
    },
    "disjunctiveFacets": Array [],
    "exhaustiveFacetsCount": true,
    "exhaustiveNbHits": true,
    "facets": Array [],
    "hierarchicalFacets": Array [],
    "hits": Array [
      Object {
        "__position": 3,
        "objectID": "1",
      },
      Object {
        "__position": 4,
        "objectID": "2",
      },
    ],
    "hitsPerPage": 2,
    "nbHits": 2,
    "nbPages": 1,
    "page": 1,
    "params": "",
    "processingTimeMS": 0,
    "query": "",
  },
  "sendEvent": [Function],
  "showMore": [Function],
  "showPrevious": [Function],
  "templateProps": Object {
    "templates": Object {
      "empty": "No results",
      "item": [Function],
      "showMoreText": "Show more results",
      "showPreviousText": "Show previous results",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "empty": false,
      "item": false,
      "showMoreText": false,
      "showPreviousText": false,
    },
  },
}
`;

exports[`infiniteHits() renders transformed items 1`] = `
Object {
  "bindEvent": [Function],
  "cssClasses": Object {
    "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
    "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
    "emptyRoot": "ais-InfiniteHits--empty",
    "item": "ais-InfiniteHits-item",
    "list": "ais-InfiniteHits-list",
    "loadMore": "ais-InfiniteHits-loadMore",
    "loadPrevious": "ais-InfiniteHits-loadPrevious",
    "root": "ais-InfiniteHits",
  },
  "hasShowPrevious": false,
  "hits": Array [
    Object {
      "__position": 3,
      "objectID": "1",
      "transformed": true,
    },
    Object {
      "__position": 4,
      "objectID": "2",
      "transformed": true,
    },
  ],
  "insights": [Function],
  "isFirstPage": true,
  "isLastPage": true,
  "results": SearchResults {
    "_rawResults": Array [
      Object {
        "exhaustiveFacetsCount": true,
        "exhaustiveNbHits": true,
        "hits": Array [
          Object {
            "objectID": "1",
          },
          Object {
            "objectID": "2",
          },
        ],
        "hitsPerPage": 2,
        "nbHits": 2,
        "nbPages": 1,
        "page": 1,
        "params": "",
        "processingTimeMS": 0,
        "query": "",
      },
    ],
    "_state": SearchParameters {
      "disjunctiveFacets": Array [],
      "disjunctiveFacetsRefinements": Object {},
      "facets": Array [],
      "facetsExcludes": Object {},
      "facetsRefinements": Object {},
      "hierarchicalFacets": Array [],
      "hierarchicalFacetsRefinements": Object {},
      "index": "",
      "numericRefinements": Object {},
      "tagRefinements": Array [],
    },
    "disjunctiveFacets": Array [],
    "exhaustiveFacetsCount": true,
    "exhaustiveNbHits": true,
    "facets": Array [],
    "hierarchicalFacets": Array [],
    "hits": Array [
      Object {
        "__position": 3,
        "objectID": "1",
        "transformed": true,
      },
      Object {
        "__position": 4,
        "objectID": "2",
        "transformed": true,
      },
    ],
    "hitsPerPage": 2,
    "nbHits": 2,
    "nbPages": 1,
    "page": 1,
    "params": "",
    "processingTimeMS": 0,
    "query": "",
  },
  "sendEvent": [Function],
  "showMore": [Function],
  "showPrevious": [Function],
  "templateProps": Object {
    "templates": Object {
      "empty": "No results",
      "item": [Function],
      "showMoreText": "Show more results",
      "showPreviousText": "Show previous results",
    },
    "templatesConfig": Object {},
    "useCustomCompileOptions": Object {
      "empty": false,
      "item": false,
      "showMoreText": false,
      "showPreviousText": false,
    },
  },
}
`;
